2009-02-23  kokosabu  <kokosabu@gmail.com>

        * Added BlockBufferedBinaryOutputPort.h,
                LineBufferedBinaryOutputPort.h,
                StandardErrorOutputPort.h

2009-02-23  higepon  <higepon@users.sourceforge.jp>

        * Added tests for call-with-port.

        * Added peek-char and tests.

        * Moved close() from BinarInputPort to Port Class.

        * test/input-port.scm : Added tests for (get-line textual-input-port).

2009-02-22  higepon  <higepon@users.sourceforge.jp>

        * Added get-datum. get-datum and read raise &lexical and &i/o-read when error occurs.

        * PortProcedures.cpp : Added get-bytevector-all, get-string-n! and get-string-all.

        * PortProcedures.cpp : Added get-bytevector-some.

2009-02-22  kokosabu  <kokosabu@gmail.com>

        * BufferedFileBinaryOutputPort.cpp : Added.

        * BufferedFileBinaryInputPort.cpp : Fixed getU8.

2009-02-21  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp : Added get-bytevector-n!.

        * BufferedFileBinaryInputPort.cpp : position things works.

2009-02-21  kokosabu  <kokosabu@gmail.com>

        * Added: put-string.

        * Fixed: put-bytevector.

2009-02-21  higepon  <higepon@users.sourceforge.jp>

        * BufferedFileBinaryInputPort.cpp : position things doesn't work yet.

        * test/input-port.scm : FileBinaryInputPort (None-buffering)  passes tests.

        * BufferedFileBinaryInputPort.cpp : Added.

        * test/input-port.scm : Added tests for file-binary-input-port on positions and buffering.

2009-02-20  higepon  <higepon@users.sourceforge.jp>

        * Passes all of string-output-port tests.

        * test/output-port.scm: Adde tests for string-output-port. Now it fails, so commented them out.

        * test/input-port.scm : Added tests for textual-input-port (position things).

        * test/output-port.scm : Added tests for textual-output-port (position things).

        * configure.ac (CFLAGS): O2 => O3.
