@@ -83,6 +83,7 @@ public:
         Bignum                      = Type<31>::VALUE,
         Compnum                     = Type<32>::VALUE,
         Gloc                        = Type<33>::VALUE,
+        BinaryInputOutputPort       = Type<34>::VALUE,
         forbidden_comma
     };
 };
