@@ -130,7 +130,8 @@ FinxumProcedures.h             FixnumProcedures.cpp                \
 Latin1Codec.h                  Latin1Codec.cpp                     \
 FFI.h                          FFI.cpp                             \
 FFIProcedures.h                FFIProcedures.cpp                   \
-CustomBinaryOutputPort.h       CustomBinaryOutputPort.cpp
+CustomBinaryOutputPort.h       CustomBinaryOutputPort.cpp          \
+BufferedFileBinaryInputOutputPort.h  BufferedFileBinaryInputOutputPort.cpp
 
 mosh_core_libraries = \
 lib/lambda/wiki.ss    \
